# my-study

./: .gitignore  README.md
study06/src/: App.jsx
study11/: app02.py
study14/: main.py
study18/backend/: main.py
study20/backend/: main.py
study20/frontend/: package-lock.json
study26/app1/: main.py
study26/app2/: main.py
study27/app1/: main.py  pyproject.toml
study27/app2/: main.py  pyproject.toml
study28/: fastapi2.Dockerfile
study29/: README.md
study31/: compose.yml
study31/app1/: main.py  pyproject.toml  settings.py
study31/app2/: vite.config.js
study32/: compose.yml
study32/app1/: main.py  pyproject.toml
study32/app2/: main.py  pyproject.toml
study32/app3/: package-lock.json  package.json  vite.config.js
study33/: dockerfile
study33/App/: README.md  (+2 more)
study34/: Dockerfile.Root  README.md
study35/: README.md
study36/: README.md  fastapi-pod.yaml  mariadb-pod.yaml  web-pod.yaml
study37/: NameSpace.md  README.md  Yaml.md  app-dp.yaml  app-sv.yaml
study38/: compose.yml
study40/: README.md
study41/: README.md  app1.py  app2.py  app3.py  db.py  main.py  pyproject.toml
study42/: README.md  app1.py  db.py  main.py  pyproject.toml
study42/pages/: page2.py  page3.py  page4.py  page5.py  page6.py  page7.py
study43/: main.py
study44/: README.md
study45/: main.py  pyproject.toml
study46/: N8N.md  compose.yml  항공.sql
study48/: README.md
study49/app2/: .gitignore  compose.yml  main.py  pyproject.toml  settings.py
study50/: README.md
study57/: README.md
study60/: antigravity.config.json
syudy48/: compose.yml
(+272 files in other folders)
