[project]
name = "study42"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "mariadb>=1.1.14",
    "pandas>=2.3.3",
    "pydantic-settings>=2.13.1",
    "requests>=2.32.5",
    "streamlit>=1.54.0",
]
