[project]
name = "app2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "mysql-connector-python>=9.6.0",
    "pandas>=2.3.3",
    "pydantic-settings>=2.13.1",
    "pymysql>=1.1.2",
    "pyspark>=4.1.1",
    "sqlalchemy>=2.0.48",
]
